@startuml MyMedQL_ER_Diagram

!define PK_COLOR #FFE6E6
!define FK_COLOR #E6F3FF
!define REG_COLOR #FFFFFF

skinparam linetype ortho
skinparam roundcorner 10
skinparam shadowing false

entity "PATIENTS" as patients PK_COLOR {
  * **patient_id** : BIGINT UNSIGNED <<PK>>
  --
  * first_name : VARCHAR(100)
  * last_name : VARCHAR(100)
  dob : DATE
  gender : ENUM
  contact_info : JSON
  medical_history : VARBINARY(8192)
  created_at : TIMESTAMP(6)
  updated_at : TIMESTAMP(6)
}

entity "STAFF" as staff PK_COLOR {
  * **staff_id** : INT UNSIGNED <<PK>>
  --
  * name : VARCHAR(150)
  * email : VARCHAR(255) <<UK>>
  * password_hash : CHAR(60)
  * role : ENUM
  metadata : JSON
  created_at : TIMESTAMP(6)
  updated_at : TIMESTAMP(6)
}

entity "DEVICES" as devices PK_COLOR {
  * **device_id** : INT UNSIGNED <<PK>>
  --
  * device_type : VARCHAR(100)
  * serial_number : VARCHAR(128) <<UK>>
  metadata : JSON
  created_at : TIMESTAMP(6)
  updated_at : TIMESTAMP(6)
}

entity "ADMISSIONS" as admissions FK_COLOR {
  * **admission_id** : BIGINT UNSIGNED <<PK>>
  --
  * patient_id : BIGINT UNSIGNED <<FK>>
  * admitted_by : INT UNSIGNED <<FK>>
  * admitted_at : DATETIME(6)
  discharge_time : DATETIME(6)
  * status : ENUM
  discharge_notes : TEXT
  created_at : TIMESTAMP(6)
  updated_at : TIMESTAMP(6)
}

entity "DEVICE_ASSIGNMENTS" as device_assignments FK_COLOR {
  * **assignment_id** : BIGINT UNSIGNED <<PK>>
  --
  * device_id : INT UNSIGNED <<FK>>
  * patient_id : BIGINT UNSIGNED <<FK>>
  assigned_by : INT UNSIGNED <<FK>>
  * assigned_from : DATETIME(6)
  assigned_to : DATETIME(6)
  notes : VARCHAR(512)
  created_at : TIMESTAMP(6)
}

entity "THRESHOLDS" as thresholds FK_COLOR {
  * **threshold_id** : BIGINT UNSIGNED <<PK>>
  --
  * name : VARCHAR(64)
  min_value : DOUBLE
  max_value : DOUBLE
  unit : VARCHAR(32)
  patient_id : BIGINT UNSIGNED <<FK>> <<nullable>>
  created_by : INT UNSIGNED <<FK>>
  * effective_from : DATETIME(6)
  effective_to : DATETIME(6)
  notes : TEXT
  created_at : TIMESTAMP(6)
}

entity "VITALS" as vitals REG_COLOR {
  * **vitals_id** : BIGINT UNSIGNED <<PK>>
  * **ts** : DATETIME(6) <<PK>> <<partition>>
  --
  * patient_id : BIGINT UNSIGNED <<no FK>>
  device_id : INT UNSIGNED <<no FK>>
  heart_rate : INT
  spo2 : INT
  bp_systolic : INT
  bp_diastolic : INT
  temperature_c : DECIMAL(4,2)
  respiration : INT
  metadata : JSON
  created_at : TIMESTAMP(6)
  ..
  Note: Partitioned table - no FKs allowed
}

entity "ALERTS" as alerts FK_COLOR {
  * **alert_id** : BIGINT UNSIGNED <<PK>>
  --
  * patient_id : BIGINT UNSIGNED <<FK>>
  vitals_id : BIGINT UNSIGNED <<no FK>>
  created_by : INT UNSIGNED <<FK>> <<nullable>>
  acknowledged_by : INT UNSIGNED <<FK>> <<nullable>>
  * alert_type : VARCHAR(64)
  * severity : ENUM
  * message : TEXT
  * created_at : DATETIME(6)
  resolved_at : DATETIME(6)
  acknowledged_at : DATETIME(6)
  extra : JSON
}

entity "NOTIFICATIONS" as notifications FK_COLOR {
  * **notification_id** : BIGINT UNSIGNED <<PK>>
  --
  alert_id : BIGINT UNSIGNED <<FK>>
  recipient_staff_id : INT UNSIGNED <<FK>> <<nullable>>
  recipient_role : ENUM <<nullable>>
  * payload : JSON
  * sent : TINYINT(1)
  * created_at : DATETIME(6)
  delivered_at : DATETIME(6)
}

' Relationships with Foreign Keys
patients ||--o{ admissions : "has"
staff ||--o{ admissions : "admits"
patients ||--o{ device_assignments : "assigned to"
devices ||--o{ device_assignments : "assigned"
staff ||--o{ device_assignments : "assigns"
patients ||--o| thresholds : "has (optional)"
staff ||--o{ thresholds : "creates"
patients ||--o{ alerts : "has"
staff ||--o{ alerts : "creates"
staff ||--o{ alerts : "acknowledges"
alerts ||--o{ notifications : "generates"
staff ||--o{ notifications : "receives"

' Logical relationships (no FKs due to partitioning)
patients ..> vitals : "has (validated by trigger)"
devices ..> vitals : "records (app validation)"
vitals ..> alerts : "triggers (set by trigger)"

note right of vitals
  **Partitioned Table**
  - No foreign keys allowed
  - Referential integrity via:
    * Trigger validation
    * Application logic
end note

note right of alerts
  **vitals_id** has no FK
  due to vitals partitioning
end note

@enduml

